# MK24F12-SDK-dummy-project

./: CMakeLists.txt  README.md  main.c
cmake/: ksdk.cmake  ksdk_1.0.0.cmake  ksdk_1.1.0.cmake  toolchain-arm.cmake
include/: FreeRTOSConfig.h
linker/KSDK_1.0.0/: MK24FN1M0xxx12_flash.ld
linker/KSDK_1.1.0/: MK24FN1M0xxx12_flash.ld
